--- a/wildcatweb/src/BluetoothUI.module.css
+++ b/wildcatweb/src/BluetoothUI.module.css
@@ -2,11 +2,12 @@
 
 .menu {
     display: flex;
+    justify-content: flex-end;
     gap: var(--spacing-2);
-    z-index: var(--z-index-above);
+    /*z-index: var(--z-index-above);
     position: absolute;
     top: var(--spacing-4);
-    right: var(--spacing-4);
+    right: var(--spacing-4);*/
 }
 
 /* Style for all buttons using retro theme approach */
@@ -16,7 +17,7 @@
     width: var(--bluetooth-button-size);
     height: var(--bluetooth-button-size);
     background-color: transparent;
-    border: var(--border-width-standard) solid var(--color-border-inactive);
+    /*border: var(--border-width-standard) solid var(--color-border-inactive);*/
     border-radius: 50%;
     display: flex;
     align-items: center;
