--- a/wildcatweb/src/FunctionDefault.module.css
+++ b/wildcatweb/src/FunctionDefault.module.css
@@ -3,7 +3,8 @@
 
 .hubTopBackground {
     position: relative;
-    height: 100%;
+    /*height: 100%;*/
+    flex: 1 1 auto;
     display: flex;
     flex-direction: column;
     border: 2px solid var(--color-blue);
